--- a/WebAppGraphAPI/Web.config
+++ b/WebAppGraphAPI/Web.config
@@ -20,6 +20,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <sessionState timeout="525600" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
