--- a/WebAppGraphAPI/bin/WebAppGraphAPI.dll.config
+++ b/WebAppGraphAPI/bin/WebAppGraphAPI.dll.config
@@ -9,7 +9,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--<add key="ida:ClientId" value="6168e2bb-948e-4422-9886-936aafe0fda6" />-->
     <add key="ida:ClientId" value="c7106273-7c25-48e8-954e-cf207b5eb3c9" />
+    <!--<add key="ida:AppKey" value="EKzGD1Q0QkMel189KkV+XanMl9PAboSGytMVMTteaFA=" />-->
     <add key="ida:AppKey" value="wDckc8ebbawALFLeRvvxdG7zGf6N36T/JPm02oOkZsI=" />
     <add key="ida:AADInstance" value="https://login.windows.net/{0}" />
     <add key="ida:Tenant" value="graphDir1.onMicrosoft.com" />
