Pull out configuration values into a static class
Moved the api version, graph resource id and tenant claim constants into a
static class to reduce code duplication and centralize their access.

--- a/WebAppGraphAPI/WebAppGraphAPI.csproj
+++ b/WebAppGraphAPI/WebAppGraphAPI.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\TokenCacheUtils.cs" />
+    <Compile Include="Utils\GraphConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
