--- a/WebAppGraphAPI/WebAppGraphAPI.csproj
+++ b/WebAppGraphAPI/WebAppGraphAPI.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Models\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utils\AuthUtils.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\TokenCacheUtils.cs" />
     <Compile Include="Utils\GraphConfiguration.cs" />
