--- a/WebAppGraphAPI/bin/WebAppGraphAPI.dll.config
+++ b/WebAppGraphAPI/bin/WebAppGraphAPI.dll.config
@@ -60,6 +60,14 @@
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.10625.1106" newVersion="4.0.10625.1106" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Protocol.Extensions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.10625.1106" newVersion="1.0.10625.1106" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
