Updated with GraphClient 2.0.1.
- All operation are async.
- Various improvements and bug fixes.

--- a/WebAppGraphAPI/Web.config
+++ b/WebAppGraphAPI/Web.config
@@ -13,9 +13,11 @@
     <add key="ida:AppKey" value="wDckc8ebbawALFLeRvvxdG7zGf6N36T/JPm02oOkZsI=" />
     <add key="ida:AADInstance" value="https://login.windows.net/{0}" />
     <add key="ida:Tenant" value="graphDir1.onMicrosoft.com" />
-    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44322/" />
+    <add key="ida:TenantId" value="4fd2b2f2-ea27-4fe5-a8f3-7b1a7c975f34" />
+    <add key="ida:PostLogoutRedirectUri" value="http://localhost:44322/" />
     <add key="ida:GraphApiVersion" value="2013-11-08" />
     <add key="ida:GraphUrl" value="https://graph.windows.net" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
